--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="container">
         <div class="header__top" id="header__top">
           <nav class="menu" id="menu">
+            <ul class="menu__list">
             <li class="menu__list-item">
               <a href="#" class="menu__list-link" data-scroll="#about">Про мене</a>
             </li>
@@ -29,6 +30,7 @@
             <li class="menu__list-item">
               <a href="#" class="menu__list-link" data-scroll="#footer">Контакти</a>
             </li>
+            </ul>
           </nav>
           <a href="tel:+380963545254" class="header__phone">+38(096)354-52-54</a>
           <button class="nav-toggle " id="nav-toggle" type="button">
