--- a/index.html
+++ b/index.html
@@ -456,12 +456,11 @@
                 </h5>
                 <p>
                   На каналі YouTube MargoSofi проводяться on-line майстер-класи по
-                  в'язанню іграшок!
+                  в'язанню іграшок! </p>
                    <p> Приєднуйтеся та пориньте у
                   захоплюючий світ hand-made!
                   </p>
                   <p> Залиште заявку для участі у майстер-класі.</p>
-                </p>
               </div>
               <div class="price__date">
                 01.09.2020
